update .env and readme

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
-PGHOST=localhost
-PGUSER=JP25733
-PGDATABASE=JP25733
-PGPASSWORD=null
-PGPORT=5432
+PGHOST=
+PGUSER=
+PGDATABASE=
+PGPASSWORD=
+PGPORT=
 EXPRESS_PORT=4000
